some fixing in author description align and adding link to twitter

--- a/wp-content/themes/tableless/assets/css/_base.sass
+++ b/wp-content/themes/tableless/assets/css/_base.sass
@@ -87,6 +87,23 @@ body
     flex: 1 0 250px
     text-align: center
 
+.tb-twitter-lnk
+  display: block
+  text-decoration: none
+  color: #2daae2
+  padding: 25px 0 0
+  &:hover
+    color: #000
+  &:before
+    content: ""
+    display: inline-block
+    vertical-align: middle
+    background: url(images/twitter-icon-blue.png) no-repeat center
+    background-size: contain
+    width: 20px
+    height: 20px
+    margin-right: 5px
+
 ////
 // Página de Author
 ////
@@ -94,10 +111,13 @@ body
   @extend .tb-section
 
 .tb-post-author
+  display: flex
+  flex-direction: column
+  align-items: center
 
   img
-    width: 300px
-    height: 300px
+    max-width: 300px
+    height: auto
     border-radius: 100%
     margin-bottom: 25px
 
@@ -105,6 +125,12 @@ body
     max-width: 1000px
     margin-right: auto
     margin-left: auto
+    text-align: center
+    padding-bottom: 20px
+
+    &:after
+      margin-top: 60px
+      margin-bottom: 20px
 
 /////
 /// Contact Form
